@@ -62,3 +62,4 @@ http://winmerge.org/developer/tracker-shortcuts.php
 http://winmerge.org/developer/l10n/index.php
 http://winmerge.org/developer/l10n/instructions.php
 http://winmerge.org/developer/l10n/status.php
+http://winmerge.org/support/index.php
